front/main/app/styles/component/discussion/_discussion-user-activity-list.scss
.discussion-user-activity-list {
	overflow-x: auto;
	color: $discussion-user-activity-text-color;

	.row {
		display: flex;
		height: $discussion-user-activity-row-height;

		.user {
			display: flex;
			flex: 1;
			min-width: 150px;

			.user-avatar {
				align-items: center;
				display: flex;
				flex: 0 0 50px;
				justify-content: center;
				position: relative;

				figure {
					&.avatar {
						img, svg {
							border-color: $discussion-user-activity-avatar-stroke-color;
						}
					}
				}
			}

			.username {
				align-items: center;
				border-bottom: 1px solid $discussion-user-activity-row-separator-color;
				display: flex;
				flex: 1;
				min-width: 0;

				a {
					display: block;
					overflow: hidden;
					text-overflow: ellipsis;
					white-space: nowrap;
				}
			}
		}

		.details {
			align-items: center;
			border-bottom: 1px solid $discussion-user-activity-row-separator-color;
			display: flex;
			flex: 1;
			justify-content: flex-end;

			.user-activity-value {
				margin-left: 12px;
				text-align: right;
				white-space: nowrap;

				.description {
					color: $discussion-user-activity-value-description-color;
					font-size: $wds-typescale-size-minus-2;
				}

				&.reported {
					width: 80px;
				}

				&.queued {
					width: 110px;
				}

				&.verified {
					width: 50px;
				}

				&.deleted {
					width: 50px;
				}
			}

			.user-activity-icon {
				fill: $discussion-user-activity-icon-color;
				position: relative;

				&.checkmark {
					height: 18px;
					top: 3px;
					width: 18px;
				}

				&.trash {
					height: 16px;
					top: 2px;
					width: 16px;
				}
			}
		}
	}
}

@media #{$mobile-range} {
	.discussion-user-activity-list {
		padding-left: 12px;
		padding-right: 12px;

		.row {
			height: 50px;
		}

		.user-avatar {
			figure {
				&.avatar {
					img, svg {
						height: 30px;
						width: 30px;
					}
				}
			}

			.user-avatar-badge {
				left: 6px;
				top: 6px;

				svg {
					height: 15px;
					width: 15px;
				}
			}
		}
	}
}

